objects/ZPF_Supporting_Addenda_Forms__c.object
<CustomObject><fields>
        <fullName>Addendum__c</fullName>
        <label>ZPF Addendum</label>
        <referenceTo>ZPF_Addendum__c</referenceTo>
        <relationshipLabel>ZPF_Supporting Addenda Forms</relationshipLabel>
        <relationshipName>ZPF_Supporting_Addenda_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Crosswalk_of_Description_in_Action_Plan__c</fullName>
        <label>Crosswalk of Description in Action Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Description_of_Proposed_Activity__c</fullName>
        <label>Description of Proposed Activity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Public_Facing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Facing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_IA_PPC_Proposed_Amount__c</fullName>
        <inlineHelpText>Must be 10% of projected total district allocation</inlineHelpText>
        <label>Title IA PPC Proposed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Title_IIA_Proposed_Amount__c</fullName>
        <inlineHelpText>Must reflect entire projected allocation</inlineHelpText>
        <label>Title IIA Proposed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Title_III_Proposed_Amount__c</fullName>
        <inlineHelpText>Must reflect the entire projected allocation</inlineHelpText>
        <label>Title III Proposed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ZPIF_UIP_Identidier__c</fullName>
        <label>ZPIF UIP Identidier</label>
        <length>50</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Required ESEA Proposed Budget: 2015-16 Title Funds
This chart must be completed for any district that is accredited with a Priority Improvement or Turnaround plan and accepts ESEA Title funds (i.e., Titles I, IIA, III). The chart must be completed for each applicable Title program.  This includes:
(1)	Title IA Priority Performance Challenge (PPC) activities (10% of district allocation)
(2)	Title IIA activities (entire allocation)
(3)	Title III activities, if the district is a Title III grantee lead (entire allocation)</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>ZPF Supporting Addenda Form</label><nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Supporting Addenda Forms Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>ZPF_Supporting Addenda Forms</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>